<resources>
    <string name="app_name">HW03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_max">Temperature Max</string>
    <string name="temperature_min">Temperature Min</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="check_forecast">Check Forecast</string>
    <string name="wind_degree">Wind Degree</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="failure">Failure</string>
    <string name="max">"Max: "</string>
    <string name="min">"Min: "</string>
    <string name="humidity_forecast">"Humidity: "</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="current_weather">Current Weather</string>
    <string name="cities">Cities</string>
</resources>